--- a/frontend/virtual-keyboard/package.json
+++ b/frontend/virtual-keyboard/package.json
@@ -7,6 +7,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "tone": "^15.0.4",
     "web-vitals": "^4.2.4"
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
